Refactor chat functionality: update variable names for clarity, streamline message handling, and enhance chat partner data management